--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@ body {
   height: 100vh;
   font-family: 'Bagel Fat One', cursive;
   font-family: 'Raleway', sans-serif;
+  border-top: 1px solid rgb(91, 169, 38);
+  border-bottom:1px solid rgb(91, 169, 38);
+  border-image: linear-gradient(to left, #000 50%, transparent 50%) 100% 1;
 }
 .head, .links {
   text-align: center;
@@ -61,11 +64,11 @@ body {
   background-image: url('assets/greenline3.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-size: cover;
+  background-position-x: right; 
+  background-size: 50% 100%;
   height: 100%;
   width: 100%;
   margin: 0 auto;
-  
 }
 .profile-card {
   background-color: hsla(0, 0%, 100%, .5);
@@ -94,6 +97,7 @@ body {
 }
 #big-box {
   font-weight: 500;  
+  border-bottom:1px solid rgb(91, 169, 38);
 }
 .box {
   height: 100%;
@@ -154,9 +158,6 @@ font-size: 20px;
   content: "";
   clear: both;
   display: table;
-}
-.space {
-  border: 1px solid rgb(91, 169, 38);
 }
  /* Effect névjegyhez */
 #effect {
@@ -505,7 +506,6 @@ font-size: 20px;
     margin-top: -450px;
   }
 }
-
 /* Effect 2 */
 .effect-2 {
   text-align:center;
@@ -532,6 +532,7 @@ font-size: 20px;
   display:inline-block;
   overflow:hidden;
   white-space:nowrap;
+  margin-left: 20vw;
 }
 .modern:first-of-type {    /* For increasing performance 
                        ID/Class should've been used. 
@@ -583,8 +584,8 @@ font-size: 20px;
   background-color:rgba(255, 255, 255, 0.47);
   height: 100%;
   width:50%;
-  border-radius: 7px;
-  border: solid rgba(255,255,255,.7);
+  border: 1rem solid rgba(255,255,255,.7); 
+  border-image: linear-gradient(#4e9f0cb3, #f9f8f55f) 30;
 }
 .altalanos1 {
   font-size: 40px;
@@ -595,9 +596,6 @@ font-size: 20px;
   font-family: Serif;
   font-weight: 100;
   text-align: center;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis; 
 }
 .altalanos2 {
   font-size: 40px;
@@ -608,9 +606,6 @@ font-size: 20px;
   font-family: Serif;
   font-weight: 100;
   text-align: left;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis; 
 }
 .fa-check{
   color: green;
@@ -622,8 +617,8 @@ font-size: 20px;
   flex-direction: row;
   justify-content: center;
   max-width: calc(100vw - 10px);
+  margin-bottom: 20px;
 }
-
 .flex-container > div {
   margin: 10px;
   display: block;
@@ -634,8 +629,8 @@ font-size: 20px;
   background-color: rgba(255,255,255,.5);
   width:30vw;
   max-height: 400px;
-  border-radius: 4px;
-  border: solid rgba(255,255,255,.7); 
+  border: 1rem solid rgba(255,255,255,.7); 
+  border-image: linear-gradient(#f9f8f55f, #4e9f0cb3) 30;
 }
 .picture{
   width: 80%;
@@ -646,20 +641,64 @@ font-size: 20px;
   margin-left: auto;
   margin-right: auto;
 }
-#text {
+.text {
   font-size: 30px;
   text-align: center;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  color: green;
 }
-#text2 {
+.text2 {
   font-size: 15px;
-  text-align: center;
   margin-top: 10px;
-  text-overflow: clip;
-  overflow: hidden;
 }
 
 .modern {
   text-align: left;
+}
+.effect721 {
+  font-size: 16px;
+}
+@media screen and (min-width: 320px) {
+  .effect721 {
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+  }
+}
+@media screen and (min-width: 1000px) {
+  .effect721 {
+    font-size: 22px;
+  }
+}
+
+.effect722 {
+  font-size: 40px;
+}
+@media screen and (min-width: 320px) {
+  .effect722 {
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+  }
+}
+@media screen and (min-width: 1000px) {
+  .effect722 {
+    font-size: 30px;
+  }
+}
+@media screen and (min-width: 400px) {
+  .effect723 {
+    white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; 
+  }
+}
+@media screen and (max-width: 750px) {
+  .effect724 {
+    white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; 
+  }
+}
+@media screen and (max-width: 600px) {
+  .modern {
+    margin-left: 40vw;
+  }
 }
