--- a/style.css
+++ b/style.css
@@ -54,8 +54,15 @@ body {
 .head, .about {
   margin-bottom: 10%;
 }
+.about{
+  text-align: center;
+}
 .about p {
   font-size: 20px;
+}
+.about h1 {
+  font-size: 25px;
+  margin-bottom: 10px;
 }
 .content {
   padding: 10% 10%;
@@ -576,6 +583,7 @@ font-size: 20px;
   max-width: calc(100vw - 10px);
   margin: 0 auto;
   max-height: 360px;
+  margin-bottom: 20px;
 }
 .canvas > div {
   display: block;
@@ -583,7 +591,7 @@ font-size: 20px;
 #smallsquare{
   background-color:rgba(255, 255, 255, 0.47);
   height: 100%;
-  width:50%;
+  max-width: 400px;
   border: 1rem solid rgba(255,255,255,.7); 
   border-image: linear-gradient(#4e9f0cb3, #f9f8f55f) 30;
 }
@@ -627,8 +635,8 @@ font-size: 20px;
 }
 #flex1{
   background-color: rgba(255,255,255,.5);
-  width:30vw;
-  max-height: 400px;
+  max-width:400px;
+  max-height: 600px;
   border: 1rem solid rgba(255,255,255,.7); 
   border-image: linear-gradient(#f9f8f55f, #4e9f0cb3) 30;
 }
@@ -681,20 +689,6 @@ font-size: 20px;
 @media screen and (min-width: 1000px) {
   .effect722 {
     font-size: 30px;
-  }
-}
-@media screen and (min-width: 400px) {
-  .effect723 {
-    white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis; 
-  }
-}
-@media screen and (max-width: 750px) {
-  .effect724 {
-    white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis; 
   }
 }
 @media screen and (max-width: 600px) {
