--- a/style.css
+++ b/style.css
@@ -110,7 +110,62 @@ font-size: 20px;
   clear: both;
   display: table;
 }
+
+
 /* névjegy */
+.profile-image:before {
+  content: "";
+  position: absolute;
+  inset: 0px;
+  padding: 10px;
+  border-radius: 50%; 
+  background: conic-gradient(
+        #53ffa0 ,
+        #0000 30deg 120deg,
+        #53ffa0 120deg,
+        #dad8d800 210deg 300deg,
+        #4ac225 330deg
+    );
+  -webkit-mask:
+    linear-gradient(#000 0 0) content-box,
+    linear-gradient(#000 0 0);
+  -webkit-mask-composite: xor;
+          mask-composite: intersect
+}
+.profile-image:after {
+  content: "";
+  position: absolute;
+  background:
+    radial-gradient(200px at left  400px top 150px,#ff53bb 100%,#0000),
+    radial-gradient(200px at right 400px bottom 150px,#00f8d3 100%,#0000);
+  filter: blur(120px);
+  opacity: .5;
+}
+
+.profile-image:before,
+.profile-image:after {
+  transition:.5s, 99999s 99999s transform;
+}
+.profile-image:hover {
+  box-shadow: 0 0 0 1px #666;
+}
+
+.profile-image:hover:before,
+.profile-image:hover:after {
+  transform: rotate(36000deg);
+  transition: .5s,600s linear transform;
+}
+.profile-image:before {
+  background-color: #222;
+    border: 2px solid #333;
+}
+
+.profile-image {
+  margin: auto;
+  display: grid;
+  place-content: center;
+  grid-auto-flow: column;
+}
 .profile-card {
   width: 480px;
   max-width: calc(100vw - 10px);
@@ -124,7 +179,7 @@ font-size: 20px;
   font-family: 'Raleway', sans-serif;
   border-top: 1px solid rgb(91, 169, 38);
   border-bottom:1px solid rgb(91, 169, 38);
-  border-image: linear-gradient(to left, #000 50%, transparent 50%) 100% 1;
+  border-image: linear-gradient(to left, #000 30%, transparent 40%) 100% 1;
 }
 .head, .links {
   text-align: center;
@@ -134,13 +189,26 @@ font-size: 20px;
   margin: 0 auto;
 }
 #profile-image {
-  width: 120px;
-  height: 120px;
+  width: 130px;
+  height: 130px;
   border-radius: 50%;
-  margin-bottom: 10px;
+  opacity:0.9;
+  position: relative;
 }
 .profile-image {
   margin-top: -90px;
+  width: 200px;
+  height: 200px;
+  font-size:30px;
+  color: #fff;
+  background: none;
+  border: none;
+  border-radius: 50%; 
+  position: relative;
+  z-index: 0;
+  transition: .3s;
+  cursor: pointer;
+  margin-bottom: 10px;
 }
 .head, .about {
   margin-bottom: 10%;
@@ -175,16 +243,14 @@ font-size: 20px;
   margin: 0 auto;
 }
 #profile-image {
-  padding: 1px;
   background-color: #666;
   transition: all 0.5s ease-in-out;
   filter: grayscale(50%);
 }
 #profile-image:hover {
-  transform: scale(1.1);
+  transform: scale(1.2);
   filter: grayscale(20%);
 }
-
  /* Effect névjegyhez */
 #effect {
   background: #090d00;
@@ -552,7 +618,7 @@ font-size: 20px;
   background-color:rgba(255, 255, 255, 0.47);
   height: 100%;
   max-width: 400px;
-  border: 1rem solid rgba(255,255,255,.7); 
+  border: 0.5rem solid rgba(255,255,255,.7); 
   border-image: linear-gradient(#4e9f0cb3, #f9f8f55f) 30;
 }
 .altalanos1 {
@@ -598,13 +664,13 @@ font-size: 20px;
   background-color: rgba(255,255,255,.5);
   max-width:400px;
   max-height: 800px;
-  border: 1rem solid rgba(255,255,255,.7); 
+  border: 0.5rem solid rgba(255,255,255,.7); 
   border-image: linear-gradient(#f9f8f55f, #4e9f0cb3) 30;
 }
 .picture{
   width: 300px;
   height: 300px;
-  border-radius: 50%;
+  border-radius: 25% 10%;
   display: block;
   margin-top: 5px;
   margin-left: auto;
